--- a/assets/css/produccion.css
+++ b/assets/css/produccion.css
@@ -33,6 +33,30 @@ th.acciones, td.actions {
   width: 100%;
   box-sizing: border-box;
 }
+.btn-ver {
+  background: #345291;
+  color: white;
+  border: none;
+  width: 38px;
+  height: 28px;
+  font-size: 14px;
+}
+
+.btn-editar {
+  background: #a74a4a;
+  color: white;
+  border: none;
+  width: 50px;
+  height: 28px;
+  font-size: 14px;
+}
+.btn-ver:hover {
+  background-color: #2a406e;
+}
+
+.btn-editar:hover {
+  background-color: #913434 ;
+}
 .actions {
   display: flex;
   justify-content: flex-end;
@@ -40,6 +64,12 @@ th.acciones, td.actions {
   align-items: center;
   gap: 8px;
 }
+.btn-siguiente,
+.btn-anterior{
+    font-size: 13px;
+    width: 86px ;
+    height: 25px ;
+} 
 .pagination {
   display: flex;
   justify-content: flex-end;
